# TengineKit

./: .gitignore  LICENSE  POINTORDER.md  POINTORDER_CN.md  README.md  README_CN.md
.github/workflows/: android-cpu.yml  mobsfscan_sarif.yml
Android/: README.md
Android/docs/: Android_README_CN.md  Android_api.md  Android_api_CN.md  Usage.md
Android/sample/FaceDemo/app/: build.gradle
Android/sample/GoogleBodyDemo/app/: build.gradle
Android/sample/GoogleFaceDemo/: .project
Android/sample/GoogleFaceDemo/app/: build.gradle
Android/sample/GoogleHandDemo/app/: build.gradle
Android/sample/ImageDemo/app/: build.gradle
Android/source/: build.gradle  local.properties  settings.gradle
Android/source/app/: build.gradle
Android/source/app/src/main/: AndroidManifest.xml
Android/source/app/src/main/assets/model/: detect_sim_160_120.tmfile  face_landmark3d.tmfile  iris_landmark.tmfile  paddleSegSim.tmfile  tenginekit_body_detect.tmfile  tenginekit_body_detect_yf.tmfile  tenginekit_face_attribute.tmfile  tenginekit_face_attribute_if.tmfile  tenginekit_face_iris.tmfile  tenginekit_face_landmark_2d.tmfile  tenginekit_insightface_scrfd2.5g_bnkps.tmfile
Android/source/app/src/main/res/drawable/: button_face_demo_bg.xml
Android/source/app/src/main/res/layout/: activity_body_bitmap.xml  activity_body_entry.xml  activity_body_frame.xml  activity_face_bitmap.xml  activity_face_effect.xml  activity_face_entry.xml  activity_face_frame.xml  activity_fragment_camera.xml  activity_insightface_bitmap.xml  activity_insightface_entry.xml  activity_seg_entry.xml  activity_seg_video.xml  actvity_main.xml  layout_classifer.xml  seg_bitmap.xml
Android/source/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
Android/source/app/src/main/res/values-night/: themes.xml
Android/source/docs/: Android_api.md  Android_api_CN.md  Usage.md
Android/source/engine/: CMakeLists.txt  build.gradle
Android/source/engine/src/androidTest/java/com/tenginekit/engine/: ExampleInstrumentedTest.java
Android/source/engine/src/main/: AndroidManifest.xml
Android/source/engine/src/main/java/com/tenginekit/engine/: SDKConstant.java
Android/source/engine/src/main/java/com/tenginekit/engine/common/: TenginekitPoint.java
Android/source/engine/src/main/java/com/tenginekit/engine/core/: ImageConfig.java  SdkConfig.java  TengineKitEngine.java  TengineKitPoint.java  TengineKitSdk.java
Android/source/engine/src/main/java/com/tenginekit/engine/face/: Face.java  FaceConfig.java
Android/source/engine/src/main/java/com/tenginekit/engine/report/: HttpReport.java
Android/source/engine/src/main/java/com/tenginekit/engine/seg/: SegConfig.java
Android/source/engine/src/main/java/com/tenginekit/engine/utils/: DeviceUtil.java  FileUtils.java
Android/source/engine/src/main/jni/: face_engine_jni.cpp
Android/source/engine/src/main/jni/core/: faceService.cpp  faceService.h  manager.cpp  manager.hpp  segService.cpp  segService.h  tenginekit_struct.hpp
Android/source/engine/src/main/jni/face/: eyeLandmark.cpp  eyeLandmark.hpp  faceAttribute.cpp  faceAttribute.h  faceDetect.cpp  faceDetect.hpp  faceLandmark.cpp  faceLandmark.hpp  faceLandmark3d.cpp  faceLandmark3d.hpp  faceStruct.h  tenginekit_api.hpp  tenginekit_struct.hpp
Android/source/engine/src/main/jni/image/: ImageResizeHelper.cpp  ImageResizeHelper.h  ImageRotateHelper.cpp  ImageRotateHelper.h  RGBConverterHelper.cpp  RGBConverterHelper.h  YuvConverterHelper.cpp  YuvConverterHelper.h  mat_pixel_android.cpp
Android/source/engine/src/main/jni/seg/: segBase.cpp  segBase.h  segHuman.cpp  segHuman.h
Android/source/engine/src/main/jni/tengine/: data.hpp  defines.h
Android/source/engine/src/main/jni/utils/: log.h  utils.cpp  utils.hpp
Android/source/engine/src/main/res/values/: strings.xml
Android/source/engine/src/test/java/com/tenginekit/engine/: ExampleUnitTest.java
Android/source/gradle/wrapper/: gradle-wrapper.properties
Docs/: README_CN.md
Khadas/: README.md
Khadas/sample/Face/: .gitignore  CMakeLists.txt  make.sh
Khadas/sample/Face/models/: FaceDetect.tmfile  FaceLandmark2d.tmfile
Khadas/sample/Face/src/: face_detect.cpp  face_image.cpp  face_landmark.cpp  main.cpp  manager.cpp
Khadas/sample/Face/src/include/: compiler_fp16.h  face_detect.hpp  face_image.hpp  face_landmark.hpp  manager.hpp  utils.hpp
Linux/: README.md
Linux/docs/: Linux_README_CN.md  Linux_api.md  Linux_api_CN.md  Model_des.md
Linux/include/: tenginekit_api.h  tenginekit_struct.h
Linux/sample/FaceDemo/: .gitignore  CMakeLists.txt  make.sh
Linux/sample/FaceDemo/src/: demo.cpp  tenginekit_api.h
Linux/sample/FaceDemo/src/Opencv/opencv2/: cvconfig.h
docs/: Android_README_CN.md  Android_api.md  Android_api_CN.md  Api.md  Api_CN.md  Linux_README_CN.md  Linux_api.md  Linux_api_CN.md  Model_des.md  POINTORDER.md  POINTORDER_CN.md  README_CN.md  Usage.md
sample/Andorid/app/: build.gradle
sample/Andorid/app/src/main/res/values/: strings.xml
sample/FaceDemo/: gradle.properties  settings.gradle
sample/FaceDemo/app/: build.gradle
sample/FaceDemo/app/src/main/: AndroidManifest.xml
sample/FaceDemo/app/src/main/res/layout/: activity_main.xml
sample/FaceDemo/app/src/main/res/values-v21/: dimens.xml
sample/GoogleBodyDemo/: .project  build.gradle
sample/GoogleBodyDemo/app/: build.gradle
sample/GoogleBodyDemo/app/src/main/: AndroidManifest.xml
sample/GoogleFaceDemo/app/: build.gradle
sample/GoogleFaceDemo/gradle/wrapper/: gradle-wrapper.properties
sample/GoogleHandDemo/app/: build.gradle
sample/GoogleUse/: .project
sample/GoogleUse/app/: .gitignore  build.gradle
sample/GoogleUse/gradle/wrapper/: gradle-wrapper.properties
sample/ImageDemo/app/: build.gradle
sample/ImageDemo/app/src/main/: AndroidManifest.xml
(+136 files in other folders)
